[tool.poetry]
name = "pdfman"
version = "0.0.1"
description = "PDF Related utilities"
authors = ["tavi903", "sniper10754"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
